# zangetsu-notification

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  request.yaml  task.yaml
.github/workflows/: publish.yml  release-drafter.yml
senju3_notification/: __init__.py  slack.py
tests/: test_base.py  test_email.py  test_factory.py  test_line.py  test_slack_notification.py  test_teams.py  test_webhook.py
zangetsu_notification/: __init__.py  base.py  email.py  factory.py  line.py  slack.py  teams.py  webhook.py
